# MLE

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  show.txt
docs/: Doxyfile.in  footer.html  style.css
res/lua/: globals.lua  tailwind_colors.lua  testui.lua  utils.lua
res/lua/ui/: debug.lua  perf_layer.lua  terminal_layer.lua
res/models/: FemeChar4.glb  Spider1.glb
res/shaders/: blend.frag  color_pc0.frag  fs_triangle.vert  model.frag  model.vert  point.vert  triangle.vert
res/shaders/model_cv/: mesh.vert  mesh_skinned.vert  pbr.frag
res/shaders/model_pbr/: albedo_color.frag  albedo_resolve.frag  albedo_texture.frag  cartoon_color.frag  cartoon_resolve.frag  cartoon_texture.frag  color.frag  color.vert  color_skinned.vert  gbuffer_color.frag  gbuffer_texture.frag  normals_color.frag  normals_resolve.frag  normals_texture.frag  outline.frag  pbr_resolve.frag  texture.frag  texture.vert  texture_skinned.vert  tonemap.frag  wire_color.frag  wire_texture.frag  wireframe_resolve.frag
res/shaders/model_test/: color.frag  skinned.vert
res/shaders/noise/: simplex.comp
res/shaders/present/: color_correct.frag
res/shaders/scene/: light.frag  plane.frag  plane.vert  skybox.frag  skybox.vert  sun.vert  vox.frag  vox.vert  vox_recolor.vert
res/shaders/ui/: bg.frag  bg.vert  blur.comp  blur.frag  border.frag  full_screen_triangle.vert  progress_bar.frag  quad.vert  rect.frag  rect.vert  rect_instanced.vert  sdf_text_instanced.frag  sdf_text_instanced.vert  sprite.frag  sprite.vert  sprite_instanced.frag  sprite_instanced.vert  sprite_texture_array_instanced.frag  sprite_texture_array_instanced.vert  text.frag  text.vert  ui_shader_quad.vert  uv_quad_instanced.vert
res/sounds/: menu_click.flac
scripts/: app_envsetup.sh  envsetup.sh
src/mle/: Entry.inl  mainpage.dox
src/mle/audio/: Audio.cpp  Audio.h  AudioEngine.cpp  AudioEngine.h  Types.h  Utils.cpp  Utils.h
src/mle/audio.old/: Audio.h
src/mle/client/: Client.cpp  Client.h  Layer.cpp  Layer.h
src/mle/common/: Assert.h  Color.cpp  Color.h  Consts.h  ECS.h  EventDispatcher.h  Flags.h  LiveCounter.h  Logger.h  Octree.h  RectPacker.cpp  RectPacker.h  Result.h  RuntimeConfig.cpp  RuntimeConfig.h  Stopwatch.cpp  Stopwatch.h  Types.h  Utils.cpp  Utils.h
src/mle/common.old/: Color.cpp  Hash.h  RectPacker.h  Stopwatch.cpp  Stopwatch.h  Utils.cpp  Utils.h
src/mle/core/: App.h  Assert.h  Consts.h  Core.cpp  Core.h  Logger.cpp  Logger.h  PerfTracker.cpp  PerfTracker.h  Result.h  RuntimeConfig.cpp  RuntimeConfig.h  ThreadPool.cpp  ThreadPool.h  ThreadPool.h.old  Types.h  Unwrap.h
src/mle/core.old/: Core.cpp  Core.h  Scene.h  Unwrap.h
src/mle/external.old/: VMAImpl.cpp  drLibsImpl.cpp
src/mle/game/: Client.h  DefaultSceneRenderer.cpp  DefaultSceneRenderer.h  Server.cpp  Server.h  Types.h
src/mle/game.old/: Server.h
src/mle/lua/: Lua.cpp  Lua.h  Types.cpp  Types.h  Utils.cpp  Utils.h
src/mle/lua.old/: Lua.cpp  Lua.h  Utils.h
src/mle/math/: Intersect2D.cpp  Intersect2D.h  Json.h  LuaUTMathTypes.h  Types.h  Types2D.cpp  Types2D.h  Types3D.cpp  Types3D.h  Utils.cpp  Utils.h
src/mle/renderer/: Animation.cpp  Animation.h  AnimationCache.cpp  AnimationCache.h  Buffer.cpp  Buffer.cpp.old  Buffer.h  Camera.cpp  Camera.h  CommandManager.cpp  CommandManager.h  CommandPool.cpp  CommandPool.h  Consts.h  CubeMap.cpp  CubeMap.h  DescriptorPool.cpp  DescriptorPool.h  Events.h  Fence.cpp  Fence.h  Font.cpp  (+54 more)
src/mle/renderer.old/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CommandPool.cpp  CubeMap.cpp  CubeMap.h  Events.h  Fence.cpp  Image.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  RenderingThread.cpp  RenderingThread.h  Shader.cpp  Shader.h  Types.h  Utils.cpp
tests/: CMakeLists.txt
tests/Core/: CMakeLists.txt
tests/Core/res/lua/: HelloLua.lua  MathUT.lua  MathUtils.lua
tests/Core/res/shaders/: test.comp  test.frag  test.vert
tests/Core/src/: Main.cpp
tests/Core/src/core/: T.ThreadPool.cpp
tests/Core/src/lua/: T.Lua.cpp
tests/Core/src/math/: T.Types2D.cpp
tests/Core/src/renderer/: T.Buffer.cpp  T.Camera.cpp  T.FrameRenderer.cpp  T.Image.cpp  T.Pipeline.cpp  T.Renderer.cpp  T.Shader.cpp
tests/Core/src/ui/: T.Sprite.cpp  T.Tags.cpp  T.Text.cpp
tests/Core/src/utils/: T.Justify.cpp  T.RectPacker.cpp  T.String.cpp  T.StringSplit.cpp  T.UtilSrtTo.cpp  Utils.h
tests/Core/src/window/: T.UserInputManager.cpp
tests/Game/: CMakeLists.txt
tools/: CMakeLists.txt
tools/MLECubes/: CMakeLists.txt
tools/MLECubes/res/lua/: config.lua
tools/MLECubes/res/lua/ui/editor/: header.lua  layout.lua
tools/MLECubes/res/lua/ui/init/: layout.lua
tools/MLECubes/res/shaders/ui/: bg.frag
tools/MLECubes/src/: App.cpp  App.h  Editor.cpp  Editor.h  Main.cpp
tools/MLECubes/src/scenes/: Editor.cpp  Editor.h  Init.cpp  Init.h
(+276 files in other folders)
